--- a/html/css/main.css
+++ b/html/css/main.css
@@ -1,21 +1,21 @@
-/*! HTML5 Boilerplate v5.0 | MIT License | http://h5bp.com/ */
+/******************************************************************
+Site Name: Kim Myers for Congress
+Author: Lucian Tucker
+
+******************************************************************/
 
 html {
-    color: #222;
     font-size: 1em;
     line-height: 1.4;
 }
-
 ::-moz-selection {
     background: #b3d4fc;
     text-shadow: none;
 }
-
 ::selection {
     background: #b3d4fc;
     text-shadow: none;
 }
-
 hr {
     display: block;
     height: 1px;
@@ -24,47 +24,173 @@ hr {
     margin: 1em 0;
     padding: 0;
 }
-
-audio,
-canvas,
-iframe,
-img,
-svg,
-video {
+audio, canvas, iframe, img, svg, video {
     vertical-align: middle;
 }
-
 fieldset {
     border: 0;
     margin: 0;
     padding: 0;
 }
-
 textarea {
     resize: vertical;
 }
-
-.browserupgrade {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
+ul, li {
+	margin: 0;
+	padding: 0;
+	list-style: none;
 }
 
+/*    TYPOGRAPHY
+/*--------------------------------------*/
 
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
+html {
+    font: 22px/26px "proxima-nova", Helvetica Neue, Helvetica, Arial, sans-serif;
+    color: #242f33;
+}
+h1, h2, h3, h4, h5, h6 {
+	color: #134369;
+	margin-top: 0;
+}
+h1 {
+	font-size: 1.8em /*40px*/;
+}
+h2 {
+	font-size: 1.6em /*36px*/;
+}
+h3 {
+	font-size: 1.1em /*25px*/;
+}
+h4 {
+	font-size: .9em /*20px*/;
+}
+h5 {
+	font-size: .86em /*19px*/;
+}
+h6 {
+	font-size: .86em /*19px*/;
+}
 
+/*    MAIN CONTENT
+/*--------------------------------------*/
 
+/* Header */
+.header-container {
+	background: #134369;
+	width: 100%;
+	padding: 22px 0;
+}
+header {
+	width: 1100px;
+	margin: 0 auto;
+}
+header h1 {
+	display: inline;
+	float: left;
+	clear: left;
+	margin: 0;
+}
+header nav {
+	float: right;
+	clear: right;
+}
+nav ul {
+	
+}
+nav li {
+	font-size: .8em;
+	display: inline-block;
+}
+nav.main li a {
+	color: white;
+	text-decoration: none;
+	padding: 5px 20px;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+}
+nav.main li.last a {
+	color: white;
+	background-color: #ab3c39;
+	padding: 13px 45px;
+}
+header nav.social {
+	margin-bottom: 20px;
+	margin-top: -10px;
+}
+nav.social li.twitter a {
+	margin-left: 6px;
+}
 
-
-
-
-
-
-
-
+/* Home */
+.hero {
+	width: 100%;
+	clear: both;
+	background-image: url('../img/landscape.jpg');
+	background-repeat: no-repeat;
+	background-position: top center;
+	background-size: cover;
+	height: 670px;
+}
+.hero .content {
+	width: 1100px;
+	height: auto;
+	margin: 0 auto;
+	background-image: url('../img/transparent-kim.png');
+	background-repeat: no-repeat;
+	background-position: top center;
+	background-size: cover;
+	z-index: 99999999;
+	
+}
+.hero h2 {
+	text-transform: uppercase;
+	text-align: center;
+}
+.hero form {
+	background-color: rgba(255, 255, 255, 0.85);
+	width: 485px;
+	float: right;
+	clear: right;
+	padding: 50px 30px;
+}
+.hero form ul {
+	margin: 0;
+	padding: 0;
+}
+.hero form li {
+	list-style: none;
+	display: inline;
+}
+.hero form input[type="text"] {
+	border: 4px solid #ccc;
+	font-weight: bold;
+	font-size: .77em;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	padding: 20px;
+	margin: 0 0 20px 0;
+}
+.hero form input[type="button"] {
+	width: 100%;
+	padding: 20px 0;
+	text-align: center;
+	background-color: #00aef3;
+	color: white;
+	font-weight: bold;
+	border: none;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+}
+.hero form input#email {
+	width: 250px;
+	margin-right: 7px;
+}
+.hero form input#zip {
+	width: 125px;
+}
+input::-webkit-input-placeholder, input::-moz-placeholder, input:-ms-input-placeholder {
+	color: #a1a1a1;
+}
 
 
 
