--- a/sites/all/themes/kimmyers/css/main.css
+++ b/sites/all/themes/kimmyers/css/main.css
@@ -91,21 +91,27 @@ article h1, article h2, article h3, article h4, article h5, article h6 {
 }
 h1 {
 	font-size: 1.8em /*40px*/;
+	line-height: 1em;
 }
 h2 {
 	font-size: 1.6em /*36px*/;
+	line-height: 1em;
 }
 h3 {
 	font-size: 1.1em /*25px*/;
+	line-height: 1em;
 }
 h4 {
 	font-size: .9em /*20px*/;
+	line-height: 1em;
 }
 h5 {
 	font-size: .86em /*19px*/;
+	line-height: 1em;
 }
 h6 {
 	font-size: .86em /*19px*/;
+	line-height: 1em;
 }
 a {
 	text-decoration: none;
@@ -118,7 +124,8 @@ a.btn {
 	font-weight: 500;
 	text-align: center;
 	margin: 0 auto;
-	width: 315px;
+	width: 100%;
+	max-width: 315px;
 	padding: 20px 0;
 }
 h2 a {
@@ -130,10 +137,10 @@ h2 a {
 
 /* Containers */
 .content {
-	width: 1100px;
+	max-width: 1100px;
 	margin: 0 auto;
 }
-.hero, .front .support, .front section.twitter, .front .photo-gallery, .front .about, section.donate, .front .support {
+.hero, .front .support, .front section.twitter, .front .photo-gallery, .front .about, section.donate {
 	float: left;
 	clear: both;
 	width: 100%;
@@ -146,7 +153,7 @@ h2 a {
 	padding: 22px 0;
 }
 header {
-	width: 1100px;
+	max-width: 1100px;
 	margin: 0 auto;
 }
 header h1 {
@@ -296,7 +303,7 @@ input::-webkit-input-placeholder, input::-moz-placeholder, input:-ms-input-place
 section.twitter .tweet {
 	font-size: 1.4em;
 	line-height: 1.4em;
-	width: 820px;
+	max-width: 820px;
 	margin: 0 auto;
 }
 .twitter h2 a {
@@ -310,7 +317,7 @@ section.twitter .tweet .date {
 	font-size: .47em;
 }
 section.twitter .controls {
-	width: 1100px;
+	max-width: 1100px;
 	position: absolute;
 	height: 60px;
 	top: 190px;
@@ -422,7 +429,7 @@ section.donate h2 {
 section.donate .content ol {
 	float: right;
 	clear: right;
-	width: 510px!important;
+	width: 510px;
 }
 section.donate li {
 	background-color: #f14444;
@@ -460,6 +467,9 @@ footer .logo {
 	max-width: 118px;
 	height: auto;
 }
+footer .mobile-logo {
+	display: none;
+}
 footer li a.donate {
 	color: #ad3b36;
 }
@@ -494,7 +504,7 @@ footer p {
 	float: left;
 	clear: left;
 }
-.sidebar {
+div.sidebar {
 	float: right;
 	clear: right;
 	width: 380px;
@@ -557,6 +567,9 @@ footer p {
 /* Interior - Sidebar */
 .sidebar h2 {
 	font-size: 1.09em;
+}
+section.sidebar {
+	display: none;
 }
 
 /* Interior - Form */
@@ -646,8 +659,224 @@ footer p {
    Media Queries
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
-
+@media only screen and (max-width: 1100px) {
+	.content, .header-container {
+		padding-left: 5%;
+		padding-right: 5%;
+	}
+	.header-container {
+		width: auto;
+	}
+	section.donate h2, section.donate p {
+		width: 100%;
+		float: none;
+	}
+	section.donate .content ol {
+		width: 100%;
+		float: none;
+		text-align: center;
+	}
+	section.donate li {
+		width: 15%;
+		padding: 5% 0;
+		margin: 2%;
+	}
+	section.donate a {
+		font-size: 2.27em;
+	}
+	.not-front article {
+		width: 100%;
+		float: none;
+		clear: both;
+	}
+	
+	/* Interior Pages */
+	section.sidebar {
+		float: none;
+		clear: both;
+		width: 100%;
+		margin-top: 0;
+	}
+	div.sidebar {
+		display: none;
+	}
+	
+	/* Interior - Twitter */
+	.sidebar .twitter img {
+		display: none;
+	}
+	.sidebar .twitter h2 {
+		font-size: 1.6em;
+		margin-top: 0;
+	}
+	.sidebar .twitter p {
+		font-size: 1.1em;
+		line-height: 1.4em;
+	}
+	.sidebar .twitter a.btn {
+		width: 100%;
+		max-width: 315px;
+		padding: 20px 0;
+		font-size: 1em;
+	}
+	
+	/* Interior - Support */
+	.sidebar .support h2 {
+		font-size: 1.6em;
+		text-align: center;
+	}
+	.sidebar .support p {
+		font-size: 1.1em;
+		text-align: center;
+	}
+	.sidebar .support img {
+		width: 61px;
+		height: 61px;
+	}
+}
+@media only screen and (max-width: 994px) {
+	body {
+		word-wrap: break-word;
+	}
+	/*a.btn {
+		padding: 16px 0;
+	}*/
+	
+	/* Header/Footer */
+	header nav.social, footer nav {
+		display: none;
+	}
+	footer p {
+		width: auto;
+	}
+	footer .logo {
+		display: none;
+	}
+	footer .mobile-logo {
+		display: inline;
+		width: 192px;
+		height: 106px;
+	}
+	footer h3 {
+		margin-bottom: 50px;
+	}
+	.responsive-menus.responsified {
+		clear: none;
+	}
+	.responsive-menus.responsified span.toggler {
+		background: none;
+		box-shadow: none;
+		font-size: 3.4em;
+		float: right;
+		margin-top: 30px;
+	}
+	.responsive-menus.responsified.responsive-toggled span.toggler {
+		border-bottom: none;
+	}
+	.responsive-menus.responsified.responsive-toggled.absolute .responsive-menus-simple {
+		margin-top: 100px;
+	}
+	
+	/* Home */
+	.hero .content {
+		background-position: bottom center;
+	}
+	.hero form, .front .support {
+		display: none;
+	}
+	.photo-gallery .left, .photo-gallery .right {
+		float: none;
+		clear: none;
+		margin: 0 auto;
+		width: 600px;
+	}
+	.photo-gallery .left li {
+		width: 600px;
+		height: 408px;
+	}
+	.photo-gallery .right li {
+		width: 600px;
+		height: 642px;
+	}
+	.photo-gallery .left li + li, .photo-gallery .right li + li {
+		display: none;
+	}
+	.photo-gallery li .overlay {
+		width: 100%;
+		height: 100%;
+		background: rgba(60, 102, 133, 0.8);
+	}
+	.photo-gallery li .field-type-text {
+		width: auto;
+		height: 150px;
+		padding: 20px;
+		opacity: 1;
+		position: absolute;
+		top: 10%;
+		left: auto;
+		margin: 0;
+		font-size: 1.5em;
+		line-height: 1.3em;
+		text-transform: uppercase;
+	}
+	section.twitter .controls {
+		display: none;
+	}
+	section.twitter .tweet {
+		font-size: 1.2em;
+		line-height: 1.2em;
+	}
+	
+	/* Interior Pages */
+	.not-front .hero {
+		height: 493px;
+	}
+	.not-front article {
+		padding-bottom: 20px;
+	}
+	.not-front article img {
+		width: 100%;
+		max-width: 700px;
+	}
+	.not-front article p {
+		line-height: 1.3em;
+	}
+	.with-hero.sidebar {
+		margin-top: 0;
+	}
+}
+@media only screen and (max-width: 660px) {
+	/* Donate */
+	section.donate li {
+		width: 17%;
+	}
+	section.donate a {
+		font-size: 1.8em;
+	}
+	.photo-gallery .left, .photo-gallery .right {
+		float: none;
+		clear: none;
+		margin: 0 auto;
+		width: 100%;
+	}
+	.photo-gallery .left li {
+		width: 100%;
+		height: 408px;
+	}
+	.photo-gallery .right li {
+		width: 100%;
+		height: 642px;
+	}
+	.photo-gallery li .field-type-text {
+		
+		font-size: 1em;
+		line-height: 1.3em;
+	}
+}
+@media only screen and (max-width: 430px) {
+	section.donate a {
+		font-size: 1.2em;
+	}
 }
 
 @media print,
